changed ch4 to an Appendix

--- a/guidelinesWP/01.5-reviewRPs.Rmd
+++ b/guidelinesWP/01.5-reviewRPs.Rmd
@@ -35,10 +35,11 @@ The composite or multidimensional approach for assesing status (sometimes called
 
 <!--CH: in next round, add "Review of Precautionary Approach Reference Points for a Variety of Fisheries Resources in the Maritimes Region". See Carrie's LRP Notes Word file. Dec. 17. 2021--> 
 
-For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. Under Canada's WSP, status assessments generally integrate data across numerous metrics representing different population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity. Benchmarks are established for each metric and an overall multidimensional estimate of CU status is obtained by integrating status among metrics [@holtEvaluationBenchmarksConservation2009].  One advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. A second advantage is that the approach allows stability in annual status estimates despite highly variable population dynamics for some CUs and large observation errors because a single-metric dropping below the benchmark may not trigger red status. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status overall.  Expert-driven processes to integrate often conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon, *Oncorhynchus nerka* [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *O. kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *O. tshawytscha* [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven processes is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.] developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Pacific Salmon Status Scanner, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation. 
+For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. Under Canada's WSP, status assessments generally integrate data across numerous metrics representing different population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtIndicatorsStatusBenchmarks2009]. Benchmarks are established for each metric and an overall multidimensional estimate of CU status is obtained by integrating status among metrics [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016].  An advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. Expert-driven processes to integrate often conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon, *Oncorhynchus nerka* [@grantEvaluationUncertaintyFraser2011; @grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *O. kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *O. tshawytscha* [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven processes is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.] developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Pacific Salmon Status Scanner, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation. 
 
 
-In some cases, single-metric approaches in which spawner abundances are compared with an abundance-based benchmark have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020; @pacificsalmoncommissionChapterPerformanceEvaluation2016]  and occasionally within DFO [e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012]. In addition, single-metric approaches are sometimes used in harvest control rules. While biological assessments under the WSP are implemented at the scale of CU, fisheries management and associated harvest control rules often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of individual CUs breaching their lower benchmark on spawner abundances, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
+In some cases, single-metric approaches in which spawner abundances are compared with an abundance-based benchmark have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020; @pacificsalmoncommissionChapterPerformanceEvaluation2016]  and occasionally within DFO [e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012]. One recommended lower benchmark on spawning abundances under Canada's WSP is S~gen~, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are often not available [@parkenHabitatbasedMethodsEstimate2006]. See Section \@ref(cu-est-methods). Biological benchmarks are distinguished from triggers in harvest control rules that incorporate additional socio-economic considerations beyond biological considerations [@holtDistinguishingBenchmarksBiological2013a].
+
 
 
 <!--CH included Marentette' et al. in prep's categorization of LRPs and status indicators:
@@ -68,7 +69,7 @@ Time-varying stock-recruitment dynamics usually occur at the CU level, and the i
 
 ## ROLE OF LRPS {#roleLRPs}
 
-LRPs have several roles, including triggering rebuilding plans under DFO's Precautionary Approach Framework @dfoFisheryDecisionMakingFramework2009 and the *Fisheries Act", communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values which can be used to inform fishery management decisions. For example, LRPs can be used to as part of measurable objectives to identify operational control points which are points where management actions are triggered within harvest control rules, and can also be applied as operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021]. 
+LRPs have several roles, including triggering rebuilding plans under DFO's Precautionary Approach Framework @dfoFisheryDecisionMakingFramework2009 and the *Fisheries Act*, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values which can be used to inform fishery management decisions. For example, LRPs can be used as part of measurable objectives to identify operational control points which are points where management actions are triggered within harvest control rules, and can also be applied as operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021]. 
 
 
 
