--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -81,14 +81,14 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 -->
 
 
-**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goals of DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goals of DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
 
 ## Applying the principles to LRP development
 
 For marine fish species LRPs are typically estimated as a minimum level of a single indicator such as spawning biomass (or proxy) that should not be breached [@kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021]. However, for Pacific salmon, LRPs that consider the distribution of abundances among component CUs as well as alternative indicators of status within CUs such as trends in abundances and distribution of spawning, are considered here are more consistent with previous status assessments under the WSP. Furthermore, DFO's Precautionary Approach Framework identifies additional indicators such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009]. Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors. We demonstrate the extent to which the candidate LRP methods are aligned with Principles 1-5 from Marentette et al. (in prep.), and Principle 6 for Pacific salmon.  Alternative LRP methods aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
 
-Our intention is to describe approaches for deriving CU status applicable over a range of data qualities and types, and provide LRPs that integrate the CU-level information to the scale of SMUs.  In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Then candidate LRPs that integrate CU statuses are briefly described falling into two categories: those based on the proportion of component CUs above the red zone and those based on aggregate abundances.  A more detailed description of LRPs with technical details is included in Holt et al. (in review). Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
+Our intention is to describe approaches for deriving CU status applicable over a range of data qualities and types, and provide LRPs that integrate the CU-level information to the scale of SMUs.  In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Then candidate LRPs that integrate CU statuses are briefly described falling into two categories: those based on the proportion of component CUs above the Red zone and those based on aggregate abundances.  A more detailed description of LRPs with technical details is included in Holt et al. (in review). Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
 
 <!-- Julie Marentette: There’s actually a list of 8 draft criteria/principles (supported by a number of sub-principles) we are working with right now for WP1; we only carried the first 4 into this workshop and exercises for a few reasons (because 8 is a lot, and the latter 4 are rather more to do with best practices for actions as opposed to outright characteristics or descriptors of the LRPs and indicators).
 
