--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -6,7 +6,7 @@ CW: CSASdown automatically capitalizes the titles and subtitles according to the
 -->
 ## STEPWISE APPROACH FOR SELECTING LRPS
 
-We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above red as the default method. Aggregate abundance-based LRPs are presented as an option for cases in which they are required for fisheries management (e.g., local or international), but are considered supplemental to the proportion of CUs with status above red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
+We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above Red as the default method. Aggregate abundance-based LRPs are presented as an option for cases in which they are required for fisheries management (e.g., local or international), but are considered supplemental to the proportion of CUs with status above Red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
 
 ### Data Availability and Spatial Scale (Step 1)
 
@@ -99,34 +99,34 @@ As an aside. I wonder if we need a table to show these 4 options from combinatio
 
 ### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
 
-@dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified a threshold of 100$\%$ of CUs above the red zone as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->This step omits decisions about how to prioritize CUs for conservation under growing threats, including climate change. <!--LW: unclear whether this sentence is saying that you don't need to do a cost-benefit analysis or whether that is part of another step, or that we didn't do this. Also the phrase of 'if only a portion can be conserved under growing threats, including climate change' has a lot wrapped up in it. Seems like there is unwritten context about history and how much we can do to preserve stocks, and what measures could be taken (moratoriums?) vs. what would actually be done. Suggest removing that phrase or clarifying. Removing CUs for this reason seems like a cultural/value idea than based off serious harm. I'm thinking about CUs/populations that could have been in 'serious harm' category for many decades, from a biological perspective they have just been below LRP for a long time. Does that justify disregarding them? Has this come up at TWG meetings?  CH: changed wording to omit, if only a portion can be conserved. This did come up in TWG mtgs, but we can't make those decision here.-->Those decisions would require collaboration with various sectors involved in the management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019)<!--LW: I like this point, in light of above comments it distinguishes the setting of LRP at 100% of CUs (which might trigger LRP based on very low abundance CUs which might be at very low probability of recovery based on current/future conditions) vs. the rebuilding plan which can then weigh practicality of recovery. I think this is an important distinction-->.  Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but are outside scope of identifying LRPs.
+@dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified a threshold of 100$\%$ of CUs above the Red zone as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->This step omits decisions about how to prioritize CUs for conservation under growing threats, including climate change. <!--LW: unclear whether this sentence is saying that you don't need to do a cost-benefit analysis or whether that is part of another step, or that we didn't do this. Also the phrase of 'if only a portion can be conserved under growing threats, including climate change' has a lot wrapped up in it. Seems like there is unwritten context about history and how much we can do to preserve stocks, and what measures could be taken (moratoriums?) vs. what would actually be done. Suggest removing that phrase or clarifying. Removing CUs for this reason seems like a cultural/value idea than based off serious harm. I'm thinking about CUs/populations that could have been in 'serious harm' category for many decades, from a biological perspective they have just been below LRP for a long time. Does that justify disregarding them? Has this come up at TWG meetings?  CH: changed wording to omit, if only a portion can be conserved. This did come up in TWG mtgs, but we can't make those decision here.-->Those decisions would require collaboration with various sectors involved in the management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019)<!--LW: I like this point, in light of above comments it distinguishes the setting of LRP at 100% of CUs (which might trigger LRP based on very low abundance CUs which might be at very low probability of recovery based on current/future conditions) vs. the rebuilding plan which can then weigh practicality of recovery. I think this is an important distinction-->.  Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but are outside scope of identifying LRPs.
 
-Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention that are not related to harvest (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU should be above their benchmarks to avoid serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
+Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above Red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention that are not related to harvest (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU should be above their benchmarks to avoid serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
 
 
-Once LRPs are identified, SMU-level objectives can be specified and management procedures can then be evaluated to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100$\%$ of component CUs above the red status within an SMU is a first step in that process.
+Once LRPs are identified, SMU-level objectives can be specified and management procedures can then be evaluated to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100$\%$ of component CUs above the Red status within an SMU is a first step in that process.
 
 
 ### Assess Status Relative to Proportion-based LRP (Step 5)
 
-The status of individual CUs is assessed and the proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4.  Where available, we recommend applying CU assessments from recent peer-reviewed WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@holtIndicatorsStatusBenchmarks2009; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
+The status of individual CUs is assessed and the proportion of CUs with status above Red is then compared to the LRP of 100% identified from step 4.  Where available, we recommend applying CU assessments from recent peer-reviewed WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@holtIndicatorsStatusBenchmarks2009; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
 
 
 Because WSP Integrated status assessments are resources-intensive processes involving large groups of experts over multiple days [@grantIntegratedBiologicalStatus2013] and are not available for most CUs, we demonstrate the application of the Pacific Salmon Status Scanner, which is a tool developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in Section \@ref(cu-est-methods) and our companion working paper (Holt et al. in review). Within this framework, CU status depends on a variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. 
 
 **Interim status**
 
-Given a proportion-based LRP of 100% of CUs above red status, when data deficient CUs are represented by CUs with data we refer to resulting status as 'interim' when all CUs included in assessment are above red status (Table \@ref(tab:GuidanceDDCUs)). This 'interim status' is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the four criteria listed above are met, which underscores the value of monitoring and assessing all component CUs. Where data deficient CUs are not represented by CUs with data, and all CUs included in the assessment are above red status, then the SMU is considered data deficient and SMU status cannot be evaluated. In both cases, we recommend improved monitoring to fill CU-level assessment gaps.
+Given a proportion-based LRP of 100% of CUs above Red status, when data deficient CUs are represented by CUs with data we refer to resulting status as 'interim' when all CUs included in assessment are above Red status (Table \@ref(tab:GuidanceDDCUs)). This 'interim status' is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the four criteria listed above are met, which underscores the value of monitoring and assessing all component CUs. Where data deficient CUs are not represented by CUs with data, and all CUs included in the assessment are above Red status, then the SMU is considered data deficient and SMU status cannot be evaluated. In both cases, we recommend improved monitoring to fill CU-level assessment gaps.
 
-When data are missing for one or more CUs, and at least one of data-rich CUs have red status, the LRP of 100% CUs above the red zone is considered breached, regardless of whether the data-deficient CUs are represented by data-rich CUs or not <!--(Table \@ref(tab:GuidanceDDCUs2))-->. A breach of the LRP (i.e., at least one CU with red status) can be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). Further monitoring of data-deficient CUs is still warranted in this case to inform status of remaining components of the SMU and associated rebuilding efforts. 
+When data are missing for one or more CUs, and at least one of data-rich CUs have Red status, the LRP of 100% CUs above the Red zone is considered breached, regardless of whether the data-deficient CUs are represented by data-rich CUs or not <!--(Table \@ref(tab:GuidanceDDCUs2))-->. A breach of the LRP (i.e., at least one CU with Red status) can be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above Red status). Further monitoring of data-deficient CUs is still warranted in this case to inform status of remaining components of the SMU and associated rebuilding efforts. 
 
 
 
 \renewcommand*{\arraystretch}{1.6}
 \begin{longtable}[]{p{5cm} p{3.5cm} p{3.5cm}}
-\caption{Guidelines on assessing status for proportion-based LRPs of 100\% of CUs being above red status, when at least one CU is data-deficient}\\
+\caption{Guidelines on assessing status for proportion-based LRPs of 100\% of CUs being above Red status, when at least one CU is data-deficient}\\
 \hline
- & Status of data-rich CUs: all above red status &  Status of data-rich CUs: at least one red status \\ 
+ & Status of data-rich CUs: all above Red status &  Status of data-rich CUs: at least one Red status \\ 
 \hline
 \endhead
 Status of data-deficient CUs can be inferred from data-rich CUs  &  Interim SMU status above LRPs & SMU Status = below LRP\\
@@ -209,7 +209,7 @@ The frequency of SMU-scale peer reviews outside of the annual implementation of 
 
 Although proportion-based LRPs may meet requirements under the Fish Stock provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decision making (see Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty @TreatyGovernmentCanada2019 <!--CH: check that this compiles to (2019)-->, though to comply with the WSP, the status of component CUs should also be considered. 
 
-However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs having status above red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance-based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance-based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate abundance-based LRPs are required, and build on proportion-based LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
+However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs having status above Red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance-based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance-based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate abundance-based LRPs are required, and build on proportion-based LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
 
 
 In the context described here, aggregate abundance-based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
@@ -218,7 +218,7 @@ In the context described here, aggregate abundance-based LRPs are scientifically
 ### What is Acceptable Probability of Achieving Proportion-Based LRP? (Step 8)
 
 
-Aggregate abundance-based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We recommend applying a probability of at least 50% of all CUs being above red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability because we could not identify a scientific basis for the choice (see Section \@ref(logisticMethods)). 
+Aggregate abundance-based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above Red status) is identified. We recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability because we could not identify a scientific basis for the choice (see Section \@ref(logisticMethods)). 
 
 
 \renewcommand*{\arraystretch}{1.6}
@@ -238,7 +238,7 @@ $>$ 99\%  &  virtually certain that all CUs are above their lower benchmark\\
 
 
 
-Future applications of this Step 8 when setting LRPs may want to consider the relevance of probability thresholds for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50% probability threshold of one or more CUs having red status is not directly analogous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm. In our case studies, we provide logistic regression-based LRPs for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above red. This approach to delineating serious harm could be considered risk neutral, where risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives.    
+Future applications of this Step 8 when setting LRPs may want to consider the relevance of probability thresholds for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50% probability threshold of one or more CUs having Red status is not directly analogous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm. In our case studies, we provide logistic regression-based LRPs for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above Red. This approach to delineating serious harm could be considered risk neutral, where risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives.    
 
 
 
@@ -246,7 +246,7 @@ Future applications of this Step 8 when setting LRPs may want to consider the re
 
 ### Choose among aggregate abundance-based LRPs (Step 9)
 
-Guidelines for choosing among two types of aggregate abundance-based LRPs are described here: empirical logistic regression-based LRPs and projection-based LRPs that use historical data or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above red status. These guidelines are based on assumptions required for each method. If assumptions are not met for either method presented below, then developing aggregate abundance-based LRPs that are aligned with the WSP may not be possible for this SMU. However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance-based LRPs (Section \@ref(recommendations)).
+Guidelines for choosing among two types of aggregate abundance-based LRPs are described here: empirical logistic regression-based LRPs and projection-based LRPs that use historical data or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above Red status. These guidelines are based on assumptions required for each method. If assumptions are not met for either method presented below, then developing aggregate abundance-based LRPs that are aligned with the WSP may not be possible for this SMU. However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance-based LRPs (Section \@ref(recommendations)).
 
 Both methods exploit covariation in population dynamics among component CUs, such that when one CU has depleted status and contributes relatively few spawners, it is likely that others CUs also have depleted status contributing few spawners to the aggregate abundance. In contrast, when one CU is considered healthy and contributes many spawners, it is more likely that other CUs are the same when they covary. 
 
@@ -254,7 +254,7 @@ Given, uncertainties and limitations associated with each method, application an
 
 #### Empirical logistic regression-based LRPs
 
-Empirical logistic regression-based LRPs are derived from historical time-series of the proportion of CUs above red status, indicated by a single metric metric on spawner abundances or distribution.  
+Empirical logistic regression-based LRPs are derived from historical time-series of the proportion of CUs above Red status, indicated by a single metric metric on spawner abundances or distribution.  
 
 
 LRPs based on logistic regressions may be appropriate when the following assumptions are met:
@@ -306,7 +306,7 @@ CW: Agree with the exclusion, otherwise we would also have to point out that agg
 
 #### Projection based LRPs
 
-Projection-based LRPs are derived from projections of CU-level population dynamics and associated time-series of CUs above red status as indicated by a single metric, spawner abundances relative to a lower benchmark.  CU-status derived from the Pacific Salmon Status Scanner was not considered for projection-based LRPs because the projection model identifies long-term equilibrium aggregate abundances associated with specified probabilities of component CUs being above lower benchmarks and is not structured to reflect time trends. Time trends can be assessed in simulation models that evaluate the impacts of management procedures on population dynamics from current status, as in MSEs.<!-- CH: we should mention in the other paper that projection-based LRP is an equilibrium approach-->
+Projection-based LRPs are derived from projections of CU-level population dynamics and associated time-series of CUs above Red status as indicated by a single metric, spawner abundances relative to a lower benchmark.  CU-status derived from the Pacific Salmon Status Scanner was not considered for projection-based LRPs because the projection model identifies long-term equilibrium aggregate abundances associated with specified probabilities of component CUs being above lower benchmarks and is not structured to reflect time trends. Time trends can be assessed in simulation models that evaluate the impacts of management procedures on population dynamics from current status, as in MSEs.<!-- CH: we should mention in the other paper that projection-based LRP is an equilibrium approach-->
 
 
 Projection-based LRPs may be appropriate when:
