--- a/guidelinesWP/01.5-reviewRPs.Rmd
+++ b/guidelinesWP/01.5-reviewRPs.Rmd
@@ -69,12 +69,10 @@ Time-varying stock-recruitment dynamics usually occur at the CU level, and the i
 
 ## ROLE OF LRPS {#roleLRPs}
 
-LRPs have several roles, including triggering rebuilding plans under DFO's Precautionary Approach Framework @dfoFisheryDecisionMakingFramework2009 and the *Fisheries Act*, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values which can be used to inform fishery management decisions. For example, LRPs can be used as part of measurable objectives to identify operational control points which are points where management actions are triggered within harvest control rules, and can also be applied as operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021]. 
+For marine fish stocks, LRPs have several roles including triggering rebuilding plans under DFO's Precautionary Approach Framework @dfoFisheryDecisionMakingFramework2009 and the *Fisheries Act*, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values which can be used to inform fishery management decisions, though their application to management of Pacific salmon is variable. Fisheries management for Pacific salmon is often based on a combination of escapement goals and exploitation limits at a variety of spatial scale. <!-- CH remved based on Sue's comment that this is less relevant for Pacific salmon (and so included the prev 2 sentences intead: "For example, LRPs can be used as part of measurable objectives to identify operational control points which are points where management actions are triggered within harvest control rules, and can also be applied as operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021]. "-->
 
 
-
-More generally, LRPs can be used in performance metrics within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g., 95% probability of staying above a LRP over a specified period) among other objectives, without being explicitly estimated [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020a]. For fisheries management systems in which management procedures have been simulation tested, assessment of stock status relative to an LRP is not necessary so long as the management procedure selected has been demonstrated to meet conservation (and possibly other) objectives over a range of modelled scenarios about stock and fishery dynamics.
-
+In addition, LRPs can be used in performance metrics within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g., 95% probability of staying above a LRP over a specified period) among other objectives, without being explicitly estimated [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020a]. For fisheries management systems in which management procedures have been simulation tested, assessment of stock status relative to an LRP is not necessary so long as the management procedure selected has been demonstrated to meet conservation (and possibly other) objectives over a range of modelled scenarios about stock and fishery dynamics.
 One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified. Instead, management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers and their interactions are often difficult to quantify [e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009]. In addition, salmon stock assessments have typically not integrated uncertainties in estimates of spawner abundances for reference point derivation [but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021]. The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
 
 <!--CH side note:  DFO's Fisheries Sustainability checklist shows LRPs that usually management operational control points, and not biological LRPs per se-->
