--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -144,7 +144,7 @@ Similar to logistic regression-based LRPs, projection-based LRPs rely on an unde
 
 The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run over an initialization period to remove the impacts of initial conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). We developed projection-based LRPs for SMUs that are managed under constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As for logistic regression-based LRPs, status was estimated from a single metric rather than the Rapid Multidimensional Scanner Tool because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Tool.
 
-One advantage of the approach for projection-based LRPs over logistic regression-based LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression-based LRPs, this method is not limited by historical data on CU status. To implement projection-based LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (in review) and provided online (see Appendix \@ref(app:first-appendix)).  
+One advantage of the approach for projection-based LRPs over logistic regression-based LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression-based LRPs, this method is not limited by historical data on CU status. To implement projection-based LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (in review) and provided online (see Appendix \@ref(app:links)).  
 
 After providing parameter distributions describing the CU-level population dynamics and exploitation to samSim, the projections included 4 main steps:
 
