Add flowchart to case study chapter 1

--- a/guidelinesWP/index.Rmd
+++ b/guidelinesWP/index.Rmd
@@ -44,7 +44,9 @@ bibliography: bib/refs.bib
 header-includes:
   - \usepackage{amsmath}
   - \usepackage{tcolorbox}
-# - \usepackage{tikz}
+  - \usepackage{tikz}
+  - \usetikzlibrary{shapes, arrows.meta, positioning}
+
 ---
 
 ```{r setup, echo=FALSE, cache=FALSE, message=FALSE, results='hide', warning=FALSE}
